--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,45 @@
+html {
+  font-size: 16px;
+}
+
 .tSlow, .footer h1 a, .footer .brand :hover {
   -webkit-transition-duration: 1s;
           transition-duration: 1s;
   width: 90%;
   height: 90%;
+}
+
+.hvr-underline-from-center {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+
+.hvr-underline-from-center:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 51%;
+  right: 51%;
+  bottom: 0;
+  background: white;
+  height: 4px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+  left: 0;
+  right: 0;
 }
 
 .footer {
@@ -57,7 +94,6 @@
   width: 10%;
   height: auto;
   padding-right: 10px;
-  background-color: none;
 }
 
 .footer .col {
@@ -65,7 +101,7 @@
 }
 
 .footer .col li {
-  padding-bottom: 20px;
+  margin-bottom: 1em;
   margin-left: 25%;
   list-style-type: square;
 }
@@ -74,22 +110,6 @@
   color: #bbbbbb;
   text-decoration: none;
   font-weight: 700;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(currentColor), to(currentColor));
-  background-image: linear-gradient(currentColor, currentColor);
-  background-position: 0% 100%;
-  background-repeat: no-repeat;
-  background-size: 0% 2px;
-  -webkit-transition: background-size .3s;
-  transition: background-size .3s;
-}
-
-.footer .col a:hover {
-  color: white;
-  background-size: 100% 2px;
-}
-
-.footer .col a img {
-  background-image: none;
 }
 
 .footer .email {
