--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,10 @@
 $base: #bbbbbb;
 $blanco: white;
 
+html{
+    font-size: 16px;
+}
+
 
 .tSlow{
     transition-duration: 1s;
@@ -8,6 +12,35 @@ $blanco: white;
     height: 90%;
 
 }
+.hvr-underline-from-center {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    overflow: hidden;
+  }
+  .hvr-underline-from-center:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 51%;
+    right: 51%;
+    bottom: 0;
+    background: $blanco;
+    height: 4px;
+    -webkit-transition-property: left, right;
+    transition-property: left, right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+    left: 0;
+    right: 0;
+  }
 
 .footer{
     background-image: url(../images/bg.jpg);
@@ -58,13 +91,13 @@ $blanco: white;
             width: 10%;
             height: auto;
             padding-right: 10px;
-            background-color:none;
+            
         }
     }
     .col {
         margin: 0 auto;
         li{
-            padding-bottom: 20px;
+            margin-bottom: 1em;
             margin-left:25%;
             list-style-type: square;
 
@@ -72,20 +105,7 @@ $blanco: white;
         a{
             color: $base;
             text-decoration: none;
-            font-weight: 700;
-            background-image: linear-gradient(currentColor, currentColor);
-            background-position: 0% 100%;
-            background-repeat: no-repeat;
-            background-size: 0% 2px;
-            transition: background-size .3s;
-            
-            &:hover{
-                color: $blanco;
-                background-size: 100% 2px;
-            }    
-            img{
-                background-image: none;
-            }        
+            font-weight: 700;           
         }
         
         
@@ -93,4 +113,6 @@ $blanco: white;
     .email{
         width: 80%;
     }
+
+
 }
