--- a/css/style.scss
+++ b/css/style.scss
@@ -29,7 +29,7 @@ html{
     right: 51%;
     bottom: 0;
     background: $blanco;
-    height: 4px;
+    height: 1px;
     -webkit-transition-property: left, right;
     transition-property: left, right;
     -webkit-transition-duration: 0.3s;
@@ -110,9 +110,24 @@ html{
         
         
     }
-    .email{
+    .form-control {
         width: 80%;
-    }
+        margin-left: 40px;
+        border-radius: 10px;
+      }
+      .btn-link {
+        position: relative;
+        left: 80px;
+        top: 20px;
+        &:hover{
+            background-color:$base;
+            border-radius: 20px;
+            color: black;
+        }
+      }
+      .blockquote-footer {
+          padding-top: 50px;
+      }
 
 
 }
